website/versioned_docs/version-2.0.0-beta.7/api/adapter.md
# nonebot.adapters.feishu.adapter

## _class_ `Adapter(driver, **kwargs)` {#Adapter}

- **参数**

  - `driver` (Driver)

  - `**kwargs` (Any)

### _class-var_ `event_models` {#Adapter-event_models}

- **类型:** StringTrie

- **说明:** 所有事件模型索引

### _classmethod_ `get_name()` {#Adapter-get_name}

- **说明:** 适配器名称: `Feishu`

- **参数**

  empty

- **返回**

  - str

### _method_ `setup()` {#Adapter-setup}

- **参数**

  empty

- **返回**

  - None

### _classmethod_ `json_to_event(json_data)` {#Adapter-json_to_event}

- **说明:** 将 json 数据转换为 Event 对象。

- **参数**

  - `json_data` (Any): json 数据

  - `self_id`: 当前 Event 对应的 Bot

- **返回**

  - [Event](event.md#Event) | None: Event 对象，如果解析失败则返回 None

### _classmethod_ `add_custom_model(model)` {#Adapter-add_custom_model}

- **说明**

  插入或覆盖一个自定义的 Event 类型。

  需提供 `__event__` 属性，进行事件模型索引，
  格式为 `{post_type}[.{sub_type}]`，如: `message.private`。

- **参数**

  - `model` (type[[Event](event.md#Event)]): 自定义的 Event 类型

- **返回**

  - None

### _classmethod_ `get_event_model(event_name)` {#Adapter-get_event_model}

- **说明:** 根据事件名获取对应 `Event Model` 及 `FallBack Event Model` 列表，不包括基类 `Event`。

- **参数**

  - `event_name` (str)

- **返回**

  - list[type[[Event](event.md#Event)]]

### _classmethod_ `custom_send(send_func)` {#Adapter-custom_send}

- **说明:** 自定义 Bot 的回复函数。

- **参数**

  - `send_func` (([Bot](bot.md#Bot), [Event](event.md#Event), str | [Message](message.md#Message) | [MessageSegment](message.md#MessageSegment)) -> Any)

- **返回**

  - untyped
